updated dependencies, fixed issues with touch + added server

--- a/index.html
+++ b/index.html
@@ -76,14 +76,14 @@
         }
     </style>
 
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="https://raw.githubusercontent.com/dextermilo/jquery.threedubmedia/master/event.drag/jquery.event.drag.js"></script>
-    <script src="https://raw.githubusercontent.com/dextermilo/jquery.threedubmedia/master/event.drag/jquery.event.drag.live.js"></script>
-    <script src="../vendor/jquery.drag.touch.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.13.2/plugins/CSSPlugin.min.js"></script>
+    <script type="text/javascript" language="javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script type="text/javascript" language="javascript" src="https://rawgit.com/GerHobbelt/jquery.threedubmedia/master/event.drag/jquery.event.drag.js"></script>
+    <!-- <script src="https://raw.githubusercontent.com/dextermilo/jquery.threedubmedia/master/event.drag/jquery.event.drag.live.js"></script> -->
+    <!-- <script type="text/javascript" language="javascript" src="vendor/jquery.drag.touch.js"></script> -->
+    <script type="text/javascript" language="javascript" src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.13.2/plugins/CSSPlugin.min.js"></script>
     <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.13.2/easing/EasePack.min.js"></script> -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.13.2/TweenLite.min.js"></script>
-    <script src="../jquery.slidatron.js"></script>
+    <script type="text/javascript" language="javascript" src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.13.2/TweenLite.min.js"></script>
+    <script type="text/javascript" language="javascript" src="jquery.slidatron.js"></script>
 
     <script>
         $(document).ready(function(){
