--- a/index.html
+++ b/index.html
@@ -15,98 +15,27 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
     <style type="text/css">
-        .slidatron-wrap {
-            position: relative;
-            width: 800px;
-            margin: auto;
-        }
-        .st-prev, .st-next{
-            position: absolute;
-            display: block;
-            width: 20px;
-            right: -20px;
-            top: 0;
-            text-align: center;
-            background: #aaa;
-            height: 300px;
-            line-height: 300px;
-        }
-        .st-prev {
-            left: -20px;
-        }
-        .st-next{
-            right: -20px;
-        }
-        #container {
-            width: 800px;
-            height: 300px;
-            overflow: hidden;
-        }
-        #container div.slidatron-slide {
-            width: 800px;
-            height: 300px;
-            position: relative;
-        }
-        #container div.caption {
-            width: 100px;
-            height: 280px;
-            padding: 10px;
-            position: absolute;
-            right:0;
-            top: 0;
-            background: #eeeeee;
-            opacity: 0.9;
-        }
-        .st-prev, .st-next, .st-ctrl-wrapper a {
-            cursor: pointer;
-        }
-        .st-ctrl-wrapper {
-            text-align: center;
-        }
-        .st-ctrl-wrapper a {
-            display: inline-block;
-            margin: 5px;
-            width: 20px;
-            height: 20px;
-            background: #ccc;
-        }
-        .st-ctrl-wrapper a.current {
-            background: #666;
+        .container {
+            max-width:990px;
+            margin:auto;
         }
     </style>
 
-    <script type="text/javascript" language="javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" language="javascript" src="https://rawgit.com/GerHobbelt/jquery.threedubmedia/master/event.drag/jquery.event.drag.js"></script>
-    <script type="text/javascript" language="javascript" src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.13.2/plugins/CSSPlugin.min.js"></script>
-    <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.13.2/easing/EasePack.min.js"></script> -->
-    <script type="text/javascript" language="javascript" src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.13.2/TweenLite.min.js"></script>
-    <script type="text/javascript" language="javascript" src="jquery.slidatron.js"></script>
-
-    <script>
-        $(document).ready(function(){
-            $('#container').slidatron({animationEngine: 'gsap'});
-        });
-    </script>
-
     </head>
     <body>
-
-        <div class="slidatron-wrap">
-            <div id="container">
-                <div>
-                    <img src="http://stevensegallery.com/800/300">
-                    <div class="caption">I am some <strong>html</strong></div>
-                </div>
-                <div>
-                    <img src="http://fillmurray.com/800/300">
-                    <div class="caption">I am some <em>other</em> html</div>
-                </div>
-                <div>
-                    <img src="http://www.placecage.com/c/800/300">
-                    <div class="caption">I am some <span>more</span> html</div>
-                </div>
-            </div>
+        <div class="container">
+            <h1>Slidatron Demos</h1>
+            <ul>
+                <li><a href="demo/demo-default.html">Default Demo</a></li>
+                <li><a href="demo/demo-gsap.html">Demo using GSAP animation engine</a></li>
+                <li><a href="demo/demo-requirejs.html">Demo loading as requirejs module</a></li>
+            </ul>
+            <p>It is recommended to run the demos from a webserver (the requirejs demo needs one) you can run one with</p>
+            <pre>bin/server</pre>
+            <p>or</p>
+            <pre>bin/server-ruby</pre>
         </div>
 
     </body>
