added in basic stub for tranistion modules

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             <h1>Slidatron Demos</h1>
             <ul>
                 <li><a href="demo/demo-default.html">Default Demo</a></li>
+                <li><a href="demo/demo-fade.html">Opacity Demo</a></li>
                 <li><a href="demo/demo-gsap.html">Demo using GSAP animation engine</a></li>
                 <li><a href="demo/demo-requirejs.html">Demo loading as requirejs module</a></li>
             </ul>
