--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             <ul>
                 <li><a href="demo/demo-default.html">Default Demo</a></li>
                 <li><a href="demo/demo-fade.html">Opacity Demo</a></li>
+                <li><a href="demo/demo-responsive.html">Responsive Demo</a></li>
+                <li><a href="demo/demo-responsive-fade.html">Responsive Fade</a></li>
                 <li><a href="demo/demo-gsap.html">Demo using GSAP animation engine</a></li>
                 <li><a href="demo/demo-requirejs.html">Demo loading as requirejs module</a></li>
             </ul>
