--- a/demo/demo-default.html
+++ b/demo/demo-default.html
@@ -72,9 +72,14 @@
             width: 20px;
             height: 20px;
             background: #ccc;
+            transition: background 1s;
         }
+        .st-ctrl-wrapper a.slidatron-transitioning-to,
         .st-ctrl-wrapper a.current {
             background: #666;
+        }
+        .st-ctrl-wrapper a.slidatron-transitioning-from {
+            background: #ccc;
         }
         .container {
             max-width:990px;
