--- a/demo/demo-responsive-touch-only-drag.html
+++ b/demo/demo-responsive-touch-only-drag.html
@@ -14,13 +14,14 @@
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 
     <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css">
 
     <style type="text/css">
         .slidatron-wrap {
             position: relative;
-            width: 800px;
+            width: 100%;
             margin: auto;
         }
         .st-prev, .st-next{
@@ -41,12 +42,12 @@
             right: -20px;
         }
         #container {
-            width: 800px;
+            width: 100%;
             height: 300px;
             overflow: hidden;
         }
         #container div.slidatron-slide {
-            width: 800px;
+            width: 100%;
             height: 300px;
             position: relative;
         }
@@ -89,14 +90,14 @@
 
     <script type="text/javascript" language="javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
     <script type="text/javascript" language="javascript" src="https://rawgit.com/GerHobbelt/jquery.threedubmedia/master/event.drag/jquery.event.drag.js"></script>
-    <script type="text/javascript" language="javascript" src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.13.2/plugins/CSSPlugin.min.js"></script>
-    <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.13.2/easing/EasePack.min.js"></script> -->
-    <script type="text/javascript" language="javascript" src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.13.2/TweenLite.min.js"></script>
     <script type="text/javascript" language="javascript" src="../slidatron.js"></script>
 
     <script>
         $(document).ready(function(){
-            $('#container').slidatron({animationEngine: 'gsap'});
+            $('#container').slidatron({
+                translateY: true,
+                drag: 'touch'
+            });
         });
     </script>
 
@@ -104,7 +105,7 @@
     <body>
         <div class="container">
 
-            <h1>Slidatron Demo - GSAP</h1>
+            <h1>Slidatron Demo - Responsive</h1>
 
             <div>
                 <a href="../index.html" class="back-btn btn btn-default">
@@ -113,20 +114,20 @@
             </div><br>
 
             <div class="slidatron-wrap">
+                <a href="../index.html" class="back-btn pull-right btn btn-default">
+                    <span class="glyphicon glyphicon-arrow-left"></span> Back
+                </a>
                 <div id="container">
-                    <a href="../index.html" class="back-btn pull-right btn btn-default">
-                        <span class="glyphicon glyphicon-arrow-left"></span> Back
-                    </a>
                     <div>
-                        <img src="http://stevensegallery.com/800/300">
+                        <img src="http://stevensegallery.com/990/300">
                         <div class="caption">I am some <strong>html</strong></div>
                     </div>
                     <div>
-                        <img src="http://fillmurray.com/800/300">
+                        <img src="http://fillmurray.com/990/300">
                         <div class="caption">I am some <em>other</em> html</div>
                     </div>
                     <div>
-                        <img src="http://www.placecage.com/c/800/300">
+                        <img src="http://www.placecage.com/c/990/300">
                         <div class="caption">I am some <span>more</span> html</div>
                     </div>
                 </div>
