commit for release 0.5.0

--- a/demo/demo-gsap.html
+++ b/demo/demo-gsap.html
@@ -88,7 +88,7 @@
     </style>
 
     <script type="text/javascript" language="javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" language="javascript" src="https://rawgit.com/GerHobbelt/jquery.threedubmedia/master/event.drag/jquery.event.drag.js"></script>
+    <script type="text/javascript" language="javascript" src="https://rawgit.com/azt3k/slidatron.drag/master/index.min.js"></script>
     <script type="text/javascript" language="javascript" src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.13.2/plugins/CSSPlugin.min.js"></script>
     <!-- <script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.13.2/easing/EasePack.min.js"></script> -->
     <script type="text/javascript" language="javascript" src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.13.2/TweenLite.min.js"></script>
@@ -114,9 +114,6 @@
 
             <div class="slidatron-wrap">
                 <div id="container">
-                    <a href="../index.html" class="back-btn pull-right btn btn-default">
-                        <span class="glyphicon glyphicon-arrow-left"></span> Back
-                    </a>
                     <div>
                         <img src="http://stevensegallery.com/800/300">
                         <div class="caption">I am some <strong>html</strong></div>
