--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
                 <li><a href="demo/demo-fade.html">Opacity Demo</a></li>
                 <li><a href="demo/demo-responsive.html">Responsive Demo</a></li>
                 <li><a href="demo/demo-responsive-touch-only-drag.html">Responsive (touch only drag) Demo</a></li>
+                <li><a href="demo/demo-responsive-allow-default.html">Responsive (touch only drag without scroll block) Demo</a></li>
                 <li><a href="demo/demo-responsive-fade.html">Responsive Fade</a></li>
                 <li><a href="demo/demo-gsap.html">Demo using GSAP animation engine</a></li>
                 <li><a href="demo/demo-requirejs.html">Demo loading as requirejs module</a></li>
