--- a/demo/demo-fade.html
+++ b/demo/demo-fade.html
@@ -88,7 +88,7 @@
     </style>
 
     <script type="text/javascript" language="javascript" src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script type="text/javascript" language="javascript" src="https://rawgit.com/GerHobbelt/jquery.threedubmedia/master/event.drag/jquery.event.drag.js"></script>
+    <script type="text/javascript" language="javascript" src="https://rawgit.com/azt3k/slidatron.drag/master/index.min.js"></script>
     <script type="text/javascript" language="javascript" src="../slidatron.js"></script>
 
     <script>
@@ -110,9 +110,6 @@
             </div><br>
 
             <div class="slidatron-wrap">
-                <a href="../index.html" class="back-btn pull-right btn btn-default">
-                    <span class="glyphicon glyphicon-arrow-left"></span> Back
-                </a>
                 <div id="container">
                     <div>
                         <img src="http://stevensegallery.com/800/300">
